[gd_scene load_steps=5 format=3 uid="uid://k7ghjsy8g1k0"]

[ext_resource type="Script" path="res://SCRIPTS/main_menu.gd" id="1_vkagb"]
[ext_resource type="PackedScene" uid="uid://c2o4pwngqqe7r" path="res://Art/BG/MainMenuBG/MainMenuBG.tscn" id="2_w1mmc"]
[ext_resource type="Theme" uid="uid://8bwans270knt" path="res://SCENES/GUI/UI_theme.tres" id="3_32f6x"]
[ext_resource type="LabelSettings" uid="uid://c014bsm5ryfcy" path="res://SCENES/GUI/text_title_format.tres" id="3_vj6ow"]

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vkagb")

[node name="MainMenuBg" parent="." instance=ExtResource("2_w1mmc")]

[node name="MenuContent" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 0
offset_right = 342.0
offset_bottom = 311.0
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="MenuContent"]
layout_mode = 2
text = "Splish Splashisson
"
label_settings = ExtResource("3_vj6ow")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MenuContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.721829, 0.769411, 0.817499, 1)
theme_override_colors/font_outline_color = Color(0.192157, 0.231373, 0.270588, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "A Splashy Saga"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="MenuContent"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="MenuContent/MenuButtons"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_32f6x")
text = "Play"

[node name="ControlsButton" type="Button" parent="MenuContent/MenuButtons"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_32f6x")
text = "Controls"

[node name="QuitButton" type="Button" parent="MenuContent/MenuButtons"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_32f6x")
theme_override_font_sizes/font_size = 18
text = "Quit"

[connection signal="pressed" from="MenuContent/MenuButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="visibility_changed" from="MenuContent/MenuButtons/PlayButton" to="." method="_on_play_button_visibility_changed"]
[connection signal="pressed" from="MenuContent/MenuButtons/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MenuContent/MenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
